yaml-k8s/mongo/svc-public-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service-public
spec:
  type: NodePort
  selector:
    app: mongodb
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
