yaml-k8s/mongo/ingress-db.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mongodb-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - vuha.jaxtony.xyz
    secretName: tls-certificate-certs
  rules:
  - host: vuha.jaxtony.xyz
    http:
      paths:
      - path: /db
        pathType: Prefix
        backend:
          serviceName: mongo-express-service
          servicePort: 4200
