yaml-k8s/mongo/ingress-new.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-pod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - vuha.jaxtony.xyz
    secretName: tls-demo-cert
  rules:
  - host: vuha.jaxtony.xyz
    http:
      paths:
      - path: /dbs(.*)
      # - path: /
        # pathType: Prefix
        pathType: Exact
        backend:
          service:
            name: mongo-express-service
            port:
              number: 4200
