yaml-k8s/mongo/ingress-whiitelist.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress-whitelist
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer
spec:
